--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ code/trained_models/sand/trend5/nf16_cb/verification/panorama/
 code/trained_models/sand/trend5/nf16_cb/verification/side1/
 
 code/trained_models/sand/trend5/nf16_cb/verification/side2/
+
+code/trained_models/sand/trend5/nf32_cb_eta0/verification/nn_output/
+
+code/trained_models/sand/trend5/nf32_cb_eta0/verification/panorama/
+
+code/trained_models/sand/trend5/nf32_cb_eta0/verification/side1/
+
+code/trained_models/sand/trend5/nf32_cb_eta0/verification/side2/
