All 3x3 models - only losses, w/o h5/weights

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,35 @@ code/trained_models/sand/trend*/nf*/verification/panorama/
 code/trained_models/sand/trend*/nf*/verification/nn_output/
 
 *.log
+
+code/trained_models/sand/trend8/nf64_eta5_3x3_rmsprop/d\.h5
+
+code/trained_models/sand/trend8/nf64_eta5_3x3_rmsprop/d\.weights
+
+code/trained_models/sand/trend8/nf64_eta5_3x3_rmsprop/f_gen\.h5
+
+code/trained_models/sand/trend8/nf64_eta5_3x3_rmsprop/f_gen\.weights
+
+code/trained_models/sand/trend8/nf64_eta1_3x3_rmsprop_stop7/d\.h5
+
+code/trained_models/sand/trend8/nf64_eta1_3x3_rmsprop_stop7/d\.weights
+
+code/trained_models/sand/trend8/nf64_eta1_3x3_rmsprop_stop7/f_gen\.h5
+
+code/trained_models/sand/trend8/nf64_eta1_3x3_rmsprop_stop7/f_gen\.weights
+
+code/trained_models/sand/trend8/nf64_eta1_3x3_rmsprop_3stop/d\.h5
+
+code/trained_models/sand/trend8/nf64_eta1_3x3_rmsprop_3stop/d\.weights
+
+code/trained_models/sand/trend8/nf64_eta1_3x3_rmsprop_3stop/f_gen\.h5
+
+code/trained_models/sand/trend8/nf64_eta1_3x3_rmsprop_3stop/f_gen\.weights
+
+code/trained_models/sand/trend8/nf64_eta1_3x3_rmsprop/d\.h5
+
+code/trained_models/sand/trend8/nf64_eta1_3x3_rmsprop/d\.weights
+
+code/trained_models/sand/trend8/nf64_eta1_3x3_rmsprop/f_gen\.h5
+
+code/trained_models/sand/trend8/nf64_eta1_3x3_rmsprop/f_gen\.weights
