Auto stash before merge of "master" and "origin/master"

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,83 @@ code/trained_models/sand/trend9/nf64_eta5_3x3_rms/f_gen\.h5
 code/trained_models/sand/trend9/nf64_eta5_3x3_rms/d\.weights
 
 data/dust/trend1/
+
+code/trained_models/dust/trend1/nf100_eta0_3x3/d\.h5
+
+code/trained_models/dust/trend1/nf100_eta0_3x3/d\.weights
+
+code/trained_models/dust/trend1/nf100_eta0_3x3/f_gen\.h5
+
+code/trained_models/dust/trend1/nf100_eta0_3x3/f_gen\.weights
+
+code/trained_models/dust/trend1/nf100_eta0_3x3_2/d\.h5
+
+code/trained_models/dust/trend1/nf100_eta0_3x3_2/d\.weights
+
+code/trained_models/dust/trend1/nf100_eta0_3x3_2/f_gen\.h5
+
+code/trained_models/dust/trend1/nf100_eta0_3x3_2/f_gen\.weights
+
+code/trained_models/dust/trend1/nf100_eta1_3x3/d\.h5
+
+code/trained_models/dust/trend1/nf100_eta1_3x3/d\.weights
+
+code/trained_models/dust/trend1/nf100_eta1_3x3/f_gen\.h5
+
+code/trained_models/dust/trend1/nf100_eta1_3x3/f_gen\.weights
+
+code/trained_models/dust/trend1/nf100_eta5_3x3/d\.h5
+
+code/trained_models/dust/trend1/nf100_eta5_3x3/d\.weights
+
+code/trained_models/dust/trend1/nf100_eta5_3x3/f_gen\.h5
+
+code/trained_models/dust/trend1/nf100_eta5_3x3/f_gen\.weights
+
+code/trained_models/dust/trend1/nf64_eta0_3x3/d\.h5
+
+code/trained_models/dust/trend1/nf64_eta0_3x3/d\.weights
+
+code/trained_models/dust/trend1/nf64_eta0_3x3/f_gen\.h5
+
+code/trained_models/dust/trend1/nf64_eta0_3x3/f_gen\.weights
+
+code/trained_models/dust/trend1/nf64_eta0_3x3_2/d\.h5
+
+code/trained_models/dust/trend1/nf64_eta0_3x3_2/d\.weights
+
+code/trained_models/dust/trend1/nf64_eta0_3x3_2/f_gen\.h5
+
+code/trained_models/dust/trend1/nf64_eta0_3x3_2/f_gen\.weights
+
+code/trained_models/dust/trend1/nf64_eta1_3x3/d\.h5
+
+code/trained_models/dust/trend1/nf64_eta1_3x3/d\.weights
+
+code/trained_models/dust/trend1/nf64_eta1_3x3/f_gen\.h5
+
+code/trained_models/dust/trend1/nf64_eta1_3x3/f_gen\.weights
+
+code/trained_models/dust/trend1/nf64_eta5_3x3/d\.h5
+
+code/trained_models/dust/trend1/nf64_eta5_3x3/d\.weights
+
+code/trained_models/dust/trend1/nf64_eta5_3x3/f_gen\.h5
+
+code/trained_models/dust/trend1/nf64_eta5_3x3/f_gen\.weights
+
+code/trained_models/dust/trend1/nf64_eta5_3x3_2/d\.h5
+
+code/trained_models/dust/trend1/nf64_eta5_3x3_2/d\.weights
+
+code/trained_models/dust/trend1/nf64_eta5_3x3_2/f_gen\.h5
+
+code/trained_models/dust/trend1/nf64_eta5_3x3_2/f_gen\.weights
+
+code/trained_models/dust/trend1/nf64_eta5_3x3_3/d\.h5
+
+code/trained_models/dust/trend1/nf64_eta5_3x3_3/d\.weights
+
+code/trained_models/dust/trend1/nf64_eta5_3x3_3/f_gen\.h5
+
+code/trained_models/dust/trend1/nf64_eta5_3x3_3/f_gen\.weights
